--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -13,7 +13,7 @@
     margin-right: 93px;
 
     &--blue {
-        color: $accent-text-color;
+        color: $accent-color;
     }
 }
 .nav__list {
@@ -42,6 +42,6 @@
         bottom: 0;
         transform: translateY(33.5px);
         border-radius: 2px;
-        background: $accent-text-color;
+        background: $accent-color;
     }
 }
