--- a/sass/utils/_placeholder.scss
+++ b/sass/utils/_placeholder.scss
@@ -3,13 +3,13 @@
 }
 %link {
     text-decoration: none;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color $transition, background-color $transition, border $transition;
 }
-%link::hover,
-%link::focus {
-    color: $accent-text-color;
+%link:hover,
+%link:focus {
+    color: $accent-color;
 }
-%conteiner {
+.conteiner {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
@@ -18,4 +18,13 @@
 %section {
     padding-top: 94px;
     padding-bottom: 94px;
+}
+%title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: calc(42 / 36);
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: $primari-text-color;
+    margin-bottom: 50px;
 }
